# hw_drf

./: README.md  env.sample  lms_data.json  pyproject.toml  users_data.json
config/: settings.py
lms/: admin.py  models.py  serializers.py  urls.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py  0002_payment.py
